[package]
name = "rust-lisp"
version = "0.1.0"
authors = ["Jake Waksbaum <jake.waksbaum@gmail.com>"]
build = "build.rs" # LALRPOP preprocessing

[dependencies.regex]
version = "0.2.0"

[dependencies.lalrpop-util]
version = "0.13.1"

[build-dependencies.lalrpop]
version = "0.13.1"

[dependencies]
rustyline = "1.0.0"
itertools = "0.7.4"
